Тестовый коммит - перевод заголовка

--- a/IGIndex/index.html
+++ b/IGIndex/index.html
@@ -16,7 +16,7 @@
 			</div>
 
       <div id="ig-status" style="font-size:24px;padding-top: 20px;">
-        <b id="ig-title">Index of RU Implementation Guides</b>
+        <b id="ig-title">Российские руководства по реализации FHIR</b>
 			</div>       	
 		</div>
 	</div>
