Добавлено описание руководств

--- a/IGIndex/index.html
+++ b/IGIndex/index.html
@@ -2,7 +2,7 @@
 <html xml:lang="en" xmlns="http://www.w3.org/1999/xhtml" lang="en">
 <head>
   <meta charset="UTF-8"/>
-	<title>Index of RU Implementation Guides</title>
+	<title>Список российских руководств FHIR</title>
 
   <link href="./index.css" rel="stylesheet"/>
 </head>
@@ -34,23 +34,23 @@
       	<div class="inner-wrapper">
 					<div class="col-12">
 
-						<h2>Index of RU Implementation Guides</h2>
+						<h2>Список российских руководств FHIR</h2>
 						<h3>Summary</h3>
 
 						<div>
 							<table class="grid">
-								<tr><td><b>IG</b></td><td><b>Details</b></td><td><b>Published</b></td></tr>
+								<tr><td><b>Руководство</b></td><td><b>Описание</b></td><td><b>Версия и дата публикации</b></td></tr>
 
 								<tr>
-									<td><a href="https://fhir.ru/ig/core/ImplementationGuide/ru.core">ru.core</a></td>
-									<td><b>RuCoreIG - Local Development</b><br/><div><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p></div></td>
-									<td><a href="https://fhir.ru/ig/core/v1/ImplementationGuide/ru.core">1.0.0</a><br/>Jan-2024<br/>v5.0.0</td>
+									<td><a href="https://fhir.ru/ig/core/ImplementationGuide/ru.core">Ru Core</a></td>
+									<td><b>Ru Core – базовое руководство по реализации FHIR в России, для R4</b><br/><div><p>Руководство содержит ограничения, расширения и терминологические привязки для поддержки основных особенностей российской системы здравоохранения при обмене медицинской информацией.</p></div></td>
+									<td><a href="https://fhir.ru/ig/core/v1/ImplementationGuide/ru.core">Версия 1</a><br/>Январь 2024<br/>R4</td>
 								</tr>
 
 								<tr>
-									<td><a href="https://fhir.ru/ig/lab/ImplementationGuide/ru.lab">ru.lab</a></td>
-									<td><b>RuLabIG - Local Development</b><br/><div><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p></div></td>
-									<td><a href="https://fhir.ru/ig/lab/v1/ImplementationGuide/ru.lab">1.0.0</a><br/>Jan-2024<br/>v5.0.0</td>
+									<td><a href="https://fhir.ru/ig/lab/ImplementationGuide/ru.lab">Ru Lab</a></td>
+									<td><b>Ru Lab – руководство по передаче результатов лабораторных исследований в ЕГИСЗ, для R4</b><br/><div><p>Руководство реализует требования ЕГИСЗ по передаче протокола результатов лабораторных исследований из медицинской организации в РЭМД.</p></div></td>
+									<td><a href="https://fhir.ru/ig/lab/v1/ImplementationGuide/ru.lab">Версия 1</a><br/>Январь 2024<br/>R4</td>
 								</tr>
 							</table>
 						</div>
