ссылка на build.fhir.org

--- a/IGIndex/index.html
+++ b/IGIndex/index.html
@@ -42,9 +42,10 @@
 								<tr><td><b>Руководство</b></td><td><b>Описание</b></td><td><b>Версия и дата публикации</b></td></tr>
 
 								<tr>
-									<td><a href="https://fhir.ru/ig/core/ImplementationGuide/ru.core">Ru Core</a></td>
+									//<td><a href="https://fhir.ru/ig/core/ImplementationGuide/ru.core">Ru Core</a></td>
+									<td><a href="https://build.fhir.org/ig/fhir-ru/RuCoreIG/branches/main/index.html">Ru Core</a></td>									<td><a href="https://fhir.ru/ig/core/ImplementationGuide/ru.core">Ru Core</a></td>
 									<td><b>Ru Core – базовое руководство по реализации FHIR в России, для R4</b><br/><div><p>Руководство содержит ограничения, расширения и терминологические привязки для поддержки основных особенностей российской системы здравоохранения при обмене медицинской информацией.</p></div></td>
-									<td><a href="https://fhir.ru/ig/core/v1/ImplementationGuide/ru.core">Версия 1</a><br/>Январь 2024<br/>R4</td>
+									<td><a href="https://fhir.ru/ig/core/v1/ImplementationGuide/ru.core">Версия 0.1.0</a><br/>Рабочая сборка<br/>R4</td>
 								</tr>
 
 								<tr>
