Landing paths rename

--- a/newLanding/index.html
+++ b/newLanding/index.html
@@ -21,15 +21,15 @@
     <li id="menu-item-1" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-has-children menu-item-35"><a href="#">Международный стандарт FHIR</a>
       <ul class="sub-menu">
         <li id="menu-item-1-1" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1-1"><a href="http://hl7.org/fhir/">Базовая спецификация (hl7.org)</a></li>
-        <li id="menu-item-1-2" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1-1"><a href="http://fhir.ru/wiki/whatisfhir">Лекции, курсы, публикации</a></li>
+        <li id="menu-item-1-2" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1-1"><a href="http://fhir.ru/what-is-fhir">Лекции, курсы, публикации</a></li>
         <li id="menu-item-1-3" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1-1"><a href="http://chat.fhir.org">Чат международного сообщества</a></li>
       </ul>
     </li>
     <li id="menu-item-2" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-has-children menu-item-36"><a href="#">FHIR в России</a>
       <ul class="sub-menu">
-        <li id="menu-item-2-1" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1-1"><a href="http://fhir.ru/wiki/spec">Переводы базового стандарта на русский</a></li>
+        <li id="menu-item-2-1" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1-1"><a href="http://fhir.ru/spec">Переводы базового стандарта на русский</a></li>
         <li id="menu-item-2-2" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1-1"><a href="http://fhir.ru/ig">Спецификации FHIR для России</a></li>
-        <li id="menu-item-2-3" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1-1"><a href="http://fhir.ru/wiki/apps">Прикладные разработки на FHIR</a></li>
+        <li id="menu-item-2-3" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1-1"><a href="http://fhir.ru/apps">Прикладные разработки на FHIR</a></li>
       </ul>
     </li>
     <li id="menu-item-3" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-has-children menu-item-41"><a href="#">Сообщество</a>
@@ -66,15 +66,15 @@
       <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-has-children menu-item-1"><a href="#">Международный стандарт FHIR</a>
         <ul class="sub-menu">
           <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1-1"><a href="http://hl7.org/fhir/">Базовая спецификация (hl7.org)</a></li>
-          <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1-2"><a href="http://fhir.ru/wiki/whatisfhir">Лекции, курсы, публикации</a></li>
+          <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1-2"><a href="http://fhir.ru/what-is-fhir">Лекции, курсы, публикации</a></li>
           <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1-3"><a href="http://chat.fhir.org">Чат международного сообщества</a>		  
         </ul>
       </li>
       <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-has-children menu-item-2"><a href="#">FHIR в России</a>
         <ul class="sub-menu">
-          <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-2-1"><a href="http://fhir.ru/wiki/spec">Переводы базового стандарта на русский</a></li>
+          <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-2-1"><a href="http://fhir.ru/spec">Переводы базового стандарта на русский</a></li>
           <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-2-2"><a href="http://fhir.ru/ig">Спецификации FHIR для России</a></li>
-          <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-2-3"><a href="http://fhir.ru/wiki/apps">Прикладные разработки на FHIR</a></li>
+          <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-2-3"><a href="http://fhir.ru/apps">Прикладные разработки на FHIR</a></li>
         </ul>
       </li>
       <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-has-children menu-item-3"><a href="#">Сообщество</a>
@@ -162,7 +162,7 @@
 </div>
 <section class="subhero">
 	<div class="container">
-		<a class="subhero-block" href="http://fhir.ru/wiki/spec" id="understanding-dtx">
+		<a class="subhero-block" href="http://fhir.ru/spec" id="understanding-dtx">
 			<div class="subhero-block-inner">
 				<svg width="52" height="58" viewBox="0 0 52 58" xmlns="http://www.w3.org/2000/svg">
   <g fill="#FFF" fill-rule="nonzero">
@@ -190,7 +190,7 @@
 			</div>
 			
 		</a>
-		<a class="subhero-block" href="http://fhir.ru/wiki/apps" id="advancing-dtx">
+		<a class="subhero-block" href="http://fhir.ru/apps" id="advancing-dtx">
 			<div class="subhero-block-inner">
 				<svg width="40" height="60" viewBox="0 0 40 60" xmlns="http://www.w3.org/2000/svg">
   <g fill="#FFF" fill-rule="evenodd">
@@ -210,10 +210,10 @@
 <section class="split orange-purple image-right">
 	<div class="split-text">
 		<h2 class="section-title">Хочешь познакомиться со стандартом FHIR?</h2>
-		<p>Мы подготовили список <a href="http://fhir.ru/wiki/whatisfhir" target="_blank" rel="noopener">вводных лекций</a>
+		<p>Мы подготовили список <a href="http://fhir.ru/what-is-fhir" target="_blank" rel="noopener">вводных лекций</a>
 		про стандарт в целом и на конкретные темы, например профилирование, терминологии или Smart-on-FHIR.
 		</p>
-				<a href="http://fhir.ru/wiki/whatisfhir" target="" class="btn btn-color">
+				<a href="http://fhir.ru/what-is-fhir" target="" class="btn btn-color">
 				  <span class="btn-color-wrap">Узнать больше</span></a>
 	</div>
 	<div class="split-image">
