--- a/newLanding/index.html
+++ b/newLanding/index.html
@@ -34,7 +34,7 @@
     </li>
     <li id="menu-item-3" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-has-children menu-item-41"><a href="#">Сообщество</a>
       <ul class="sub-menu">
-        <li id="menu-item-1-1" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1-1"><a href="http://fhir.ru/wiki/readme">Сайт сообщества FHIR Россия</a></li>
+        <li id="menu-item-1-1" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1-1"><a href="http://fhir.ru/wiki/readme/">Сайт сообщества FHIR Россия</a></li>
         <li id="menu-item-1-2" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1-1"><a href="https://github.com/fhir-ru">Репозиторий сообщества на GitHub</a></li>
         <li id="menu-item-1-3" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1-1"><a href="https://github.com/fhir-ru/core/discussions">Дискуссии на GitHub</a></li>
         <li id="menu-item-1-2" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1-1"><a href="https://us02web.zoom.us/j/9528778806">Приходи на встречу в зуме: по вторникам в 13:30 по Москве/СПб</a></li>
@@ -258,7 +258,7 @@
 		<p>
 		  Сообщество поддерживает базу знаний о FHIR в России, в том числе методические рекомендации по разработке спецификаций стандарта, инфраструктуры для их разработки, а также площадки для экспертного диалога….
 		</p>
-				<a href="fhir.ru/wiki/readme" target="" class="btn btn-color"><span class="btn-color-wrap">Перейти на сайт сообщества</span></a>
+				<a href="fhir.ru/wiki/readme/" target="" class="btn btn-color"><span class="btn-color-wrap">Перейти на сайт сообщества</span></a>
 	</div>
 	<div class="split-image">
 		<div class="split-image-collage">
