--- a/landing/index.html
+++ b/landing/index.html
@@ -230,7 +230,7 @@
     <p>
       Сообщество поддерживает базу знаний о FHIR в России, в том числе методические рекомендации по разработке спецификаций стандарта, инфраструктуры для их разработки, а также площадки для экспертного диалога….
     </p>
-    <a href="fhir.ru/readme" target="" class="btn btn-color"><span class="btn-color-wrap">Перейти на сайт сообщества</span></a>
+    <a href="http://fhir.ru/wiki/readme" target="" class="btn btn-color"><span class="btn-color-wrap">Перейти на сайт сообщества</span></a>
   </div>
   <div class="split-image">
     <div class="split-image-collage">
