Ссылка на RuCore, отзыв Пензина

--- a/newLanding/index.html
+++ b/newLanding/index.html
@@ -27,9 +27,9 @@
     </li>
     <li id="menu-item-2" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-has-children menu-item-36"><a href="#">FHIR в России</a>
       <ul class="sub-menu">
-        <li id="menu-item-2-1" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1-1"><a href="http://fhir.ru/spec/">Переводы базового стандарта на русский</a></li>
-        <li id="menu-item-2-2" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1-1"><a href="http://fhir.ru/ig">Спецификации FHIR для России</a></li>
-        <li id="menu-item-2-3" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1-1"><a href="http://fhir.ru/apps/">Прикладные разработки на FHIR</a></li>
+        <li id="menu-item-2-1" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1-1"><a href="https://build.fhir.org/ig/fhir-ru/RuCoreIG/branches/main/index.html">Ru Core - руководство по реализации FHIR для России</a></li>
+        <li id="menu-item-2-2" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1-1"><a href="http://fhir.ru/apps/">Прикладные разработки на FHIR</a></li>
+        <li id="menu-item-2-3" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1-1"><a href="http://fhir.ru/spec/">Переводы базового стандарта на русский</a></li>
       </ul>
     </li>
     <li id="menu-item-3" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-has-children menu-item-41"><a href="#">Сообщество</a>
@@ -72,10 +72,10 @@
       </li>
       <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-has-children menu-item-2"><a href="#">FHIR в России</a>
         <ul class="sub-menu">
-          <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-2-1"><a href="http://fhir.ru/spec/">Переводы базового стандарта на русский</a></li>
-          <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-2-2"><a href="http://fhir.ru/ig">Спецификации FHIR для России</a></li>
-          <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-2-3"><a href="http://fhir.ru/apps/">Прикладные разработки на FHIR</a></li>
-        </ul>
+          <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-2-1"><a href="https://build.fhir.org/ig/fhir-ru/RuCoreIG/branches/main/index.html">RuCore - руководство по реализации FHIR для России</a></li>
+          <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-2-2"><a href="http://fhir.ru/apps/">Прикладные разработки на FHIR</a></li>
+          <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-2-3"><a href="http://fhir.ru/spec/">Переводы базового стандарта на русский</a></li>
+	</ul>
       </li>
       <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-has-children menu-item-3"><a href="#">Сообщество</a>
         <ul class="sub-menu">
@@ -142,7 +142,7 @@
 				<div class="hero-quote-inner">
 					<img width="140" height="140" src="./assets/images/Penzin.png" class="no-lazy" alt="" decoding="async" srcset="./assets/images/Penzin.png 140w" sizes="(max-width: 140px) 100vw, 140px" />					
 					<div class="hero-quote-text">
-						<p>“Кто выигрывает на рынке? Тот, кто быстрее. Использование FHIR помогло нам вывести продукт на рынок в течение полугода, что было бы немыслимо, если разрабатывать с нуля.”</p>
+						<p>“Использование стандарта FHIR значительно ускоряет работу над продуктом в MedTech стартапе. Упрощение интеграций и готовые модели данных позволяют держать фокус на продукте, быстрее проверять гипотезы и получать обратную связь, что сокращает время создания MVP и выхода решения на рынок.”</p>
 						<p class="hero-quote-attribution"><strong>Олег Пензин</strong>, Мирамедикс</p>
 					</div>
 				</div>
