New O.Penzin photo

--- a/newLanding/index.html
+++ b/newLanding/index.html
@@ -140,7 +140,7 @@
 			</div>
 			<div class="hero-quote">
 				<div class="hero-quote-inner">
-					<img width="140" height="140" src="./assets/images/Penzin.png" class="no-lazy" alt="" decoding="async" srcset="./assets/images/Penzin.png 140w" sizes="(max-width: 140px) 100vw, 140px" />					
+					<img width="140" height="140" src="./assets/images/Penzin.png" class="no-lazy" alt="" decoding="async" srcset="./assets/images/Penzin3.png 140w" sizes="(max-width: 140px) 100vw, 140px" />					
 					<div class="hero-quote-text">
 						<p>“Использование стандарта FHIR значительно ускоряет работу над продуктом в MedTech стартапе. Упрощение интеграций и готовые модели данных позволяют держать фокус на продукте, быстрее проверять гипотезы и получать обратную связь, что сокращает время создания MVP и выхода решения на рынок.”</p>
 						<p class="hero-quote-attribution"><strong>Олег Пензин</strong>, Мирамедикс</p>
@@ -176,7 +176,7 @@
 			</div>
 			
 		</a>
-		<a class="subhero-block" href="http://fhir.ru/ig" id="value-dtx">
+		<a class="subhero-block" href="https://build.fhir.org/ig/fhir-ru/RuCoreIG/branches/main/index.html" id="value-dtx">
 			<div class="subhero-block-inner">
 				<svg width="60" height="60" viewBox="0 0 60 60" xmlns="http://www.w3.org/2000/svg">
   <g fill="#FFF" fill-rule="evenodd">
