Links to HL7.org.ru, mednet.ru

--- a/newLanding/index.html
+++ b/newLanding/index.html
@@ -253,10 +253,10 @@
 	<div class="split-text">
 		<h2 class="section-title">Хочешь познакомиться с работой сообщества FHIR Ru?</h2>
 		<p>
-		  FHIR Ru - открытое сообщество профессионалов и компаний, работающих в области медицинской информатики. Сообщество является рабочей группой комитета HL7 Russia (ссылка) и действует при поддержке ЦНИИОИЗ Минздрава России (ссылка).
+		  FHIR Ru - открытое сообщество профессионалов и компаний, работающих в области медицинской информатики. Сообщество является рабочей группой <a href="http://www.hl7.org.ru" target="_blank" rel="noopener">комитета HL7 Russia</a> и действует при поддержке <a href="https://mednet.ru" target="_blank" rel="noopener">ЦНИИОИЗ Минздрава России</a>.
 		</p>
 		<p>
-		  Сообщество поддерживает базу знаний о FHIR в России, в том числе методические рекомендации по разработке спецификаций стандарта, инфраструктуры для их разработки, а также площадки для экспертного диалога….
+		  Сообщество поддерживает базу знаний о FHIR в России, в том числе методические рекомендации по разработке спецификаций стандарта, инфраструктуры для их разработки, а также площадки для экспертного диалога.
 		</p>
 				<a href="http://fhir.ru/wiki/readme" target="" class="btn btn-color"><span class="btn-color-wrap">Перейти на сайт сообщества</span></a>
 	</div>
