--- a/newLanding/index.html
+++ b/newLanding/index.html
@@ -38,7 +38,7 @@
         <li id="menu-item-1-2" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1-1"><a href="https://github.com/fhir-ru">Репозиторий сообщества на GitHub</a></li>
         <li id="menu-item-1-3" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1-1"><a href="https://github.com/fhir-ru/core/discussions">Дискуссии на GitHub</a></li>
         <li id="menu-item-1-2" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1-1"><a href="https://us02web.zoom.us/j/9528778806">Приходи на встречу в зуме: по вторникам в 13:30 по Москве/СПб</a></li>
-        <li id="menu-item-1-3" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1-1"><a href="https://t.me/fhir_ru">Телеграмм-чат</a></li>
+        <li id="menu-item-1-3" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1-1"><a href="https://t.me/fhirru">Телеграмм-чат</a></li>
       </ul>
     </li>
   </ul>
