Указан новый путь к сборке RuCore

--- a/newLanding/index.html
+++ b/newLanding/index.html
@@ -27,7 +27,7 @@
     </li>
     <li id="menu-item-2" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-has-children menu-item-36"><a href="#">FHIR в России</a>
       <ul class="sub-menu">
-        <li id="menu-item-2-1" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1-1"><a href="https://build.fhir.org/ig/fhir-ru/RuCoreIG/branches/main/index.html">Ru Core - руководство по реализации FHIR для России</a></li>
+        <li id="menu-item-2-1" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1-1"><a href="https://build.fhir.org/ig/fhir-ru/RuCoreIG/">Ru Core - руководство по реализации FHIR для России</a></li>
         <li id="menu-item-2-2" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1-1"><a href="http://fhir.ru/apps/">Прикладные разработки на FHIR</a></li>
         <li id="menu-item-2-3" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1-1"><a href="http://fhir.ru/spec/">Переводы базового стандарта на русский</a></li>
       </ul>
