--- a/newLanding/index.html
+++ b/newLanding/index.html
@@ -28,8 +28,9 @@
     <li id="menu-item-2" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-has-children menu-item-36"><a href="#">FHIR в России</a>
       <ul class="sub-menu">
         <li id="menu-item-2-1" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1-1"><a href="https://build.fhir.org/ig/fhir-ru/RuCoreIG/">Ru Core - руководство по реализации FHIR для России</a></li>
-        <li id="menu-item-2-2" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1-1"><a href="http://fhir.ru/apps/">Прикладные разработки на FHIR</a></li>
-        <li id="menu-item-2-3" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1-1"><a href="http://fhir.ru/spec/">Переводы базового стандарта на русский</a></li>
+        <li id="menu-item-2-2" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1-1"><a href="https://drive.google.com/file/d/1NrLDgdBLiE3bNwcDyly22fmIwQwTIbT-/view?usp=sharing">ГОСТ ПМП – типы данных и некоторые ресурсы FHIR R5, описание REST API</a></li>
+        <li id="menu-item-2-3" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1-1"><a href="http://fhir.ru/apps/">Прикладные разработки на FHIR</a></li>
+        <li id="menu-item-2-4" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1-1"><a href="http://fhir.ru/spec/">Переводы базового стандарта на русский</a></li>
       </ul>
     </li>
     <li id="menu-item-3" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-has-children menu-item-41"><a href="#">Сообщество</a>
